# AgentsToolkit

./: .gitignore  AGENTS.local.md  AGENTS.md  README.md  install.py  install.sh  package-lock.json  package.json  tsconfig.json  uninstall.py  uninstall.sh
commands/: branch.md  check-auth.md  check-workflow.md  link.md  pr.md  protect.md  status.md
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: .gitkeep
desktop/src-tauri/src/: command_registry.rs  fs_manager.rs  ipc.rs  lib.rs  main.rs  out_reference_manager.rs  symlink.rs  types.rs
desktop/src-tauri/src/deployment/: command_loader.rs  command_validator.rs  converters.rs  deployer.rs  error.rs  logger.rs  mod.rs  project.rs  registry.rs  state.rs  validator.rs
desktop/src-tauri/src/deployment/agents/: aider.rs  azure_devops.rs  claude.rs  cline.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  mod.rs  placeholder.rs  warp.rs
desktop/src-tauri/tests/: command_tests.rs  deployment_tests.rs  out_reference_tests.rs
docs/: AGENTS_REFERENCE.md  commands-guide.md  rule-packs-guide.md  v2-migration.md
schemas/: agent-definition.schema.json  command-definition.schema.json  out-reference.schema.json  rule-pack.schema.json
scripts/: SAFETY.md  branch.py  branch.sh  check-auth.sh  check-workflow.sh  check_auth.py  check_workflow.py  followup.py  followup.sh  issue.py  issue.sh  link.py  link.sh  migrate_to_packs.py  pr.py  pr.sh  protect.py  push.py  status.py  (+3 more)
(+148 files in other folders)
