[package]
name = "agentstoolkit-desktop"
version = "0.1.0"
description = "AgentsToolkit Desktop Application"
authors = ["AgentsToolkit"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"

[target.'cfg(windows)'.dependencies]
junction = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
